syntax = "proto3";

message Vision_DetectionBall {
  float  vel_x      =  1;
  float  vel_y      =  2; 
  uint32 area       =  3;
  float  x          =  4;
  float  y          =  5;
  float  height     =  6;
  uint32 ball_state =  7;
  uint32 last_touch =  8;
  bool   valid      =  9;
  float  raw_x      =  10;
  float  raw_y      =  11;
  float  chip_predict_x =12;
  float  chip_predict_y =13;
}

message Vision_DetectionRobot {
  bool   valid    =  1;
  uint32 robot_id      =  2;
  float  x             =  3;
  float  y             =  4;
  float  orientation   =  5;
  float  vel_x         =  6;
  float  vel_y         =  7; 
  float  rotate_vel    =  8;
  float  accelerate_x  =  9;
  float  accelerate_y  =  10;
  float  raw_x         =  11;
  float  raw_y         =  12;
  float  raw_orientation = 13;
  float  raw_vel_x     = 14;
  float  raw_vel_y     = 15;
  float  raw_rotate_vel = 16;
  float  confidence  =  17;
}

message Vision_DetectionFrame {
  Vision_DetectionBall  balls         = 1;
  repeated Vision_DetectionRobot robots_yellow = 2;
  repeated Vision_DetectionRobot robots_blue   = 3;
}
